impl send message and show message

--- a/src/app/components/room/room.component.html
+++ b/src/app/components/room/room.component.html
@@ -1,1 +1,11 @@
-<p>room works!</p>
+<div>
+	<h1>Chat Room</h1>
+
+	<div *ngFor="let message of chatService.messageArray">
+		<p>{{message}}</p>
+	</div>
+
+	<input [(ngModel)]="messageInput" type="text" name="message" placeholder="message">
+	<button (click)="sendMessage()">Send</button>
+	<button (click)="showAll()">Show the message array</button>
+</div>
