--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,1 +1,10 @@
-<p>chat works!</p>
+<div>
+	<div *ngFor="let message of chatService.messageArray">
+		<p>{{message}}</p>
+	</div>
+
+	<input [(ngModel)]="messageInput" type="text" name="message" placeholder="message">
+	<button (click)="sendMessage()">Send</button>
+	<button (click)="showAll()">Show the message array</button>
+</div>
+
